--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
 
   <h1>Moisesito te dice hoy :</h1>
-  <button onclick="mostrarFrase()">Touch hear</button>
+  <button onclick="mostrarFrase()">Pulsame</button>
 
   <div id="cuadro">Buenos días, estas hermosa</div>
 
